--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,21 +23,22 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  cupertino_icons: ^1.0.0
-  intl: ^0.16.1
-  time_machine: ^0.9.15
   cloud_firestore: ^0.14.2
+  cupertino_icons: ^1.0.0
   firebase_analytics: ^6.1.0
+  firebase_auth: ^0.18.2
   firebase_core: ^0.5.1
   fluttertoast: ^7.1.1
   google_sign_in: ^4.5.5
+  intl: ^0.16.1
   provider: ^4.3.2+2
   shared_preferences: ^0.5.12+2
+  time_machine: ^0.9.15
+  universal_html: ^1.2.3
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -51,6 +52,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/train.png
+    - assets/images/google.png
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
@@ -64,8 +66,8 @@ flutter:
   fonts:
     - family: OpenSans
       fonts:
-        - asset: fonts/OpenSans-Regular.ttf
-        - asset: fonts/OpenSans-Bold.ttf
+        - asset: assets/fonts/OpenSans-Regular.ttf
+        - asset: assets/fonts/OpenSans-Bold.ttf
           weight: 700
   #   - family: Trajan Pro
   #     fonts:
