--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  auto_size_text: ^2.1.0
   cloud_firestore: ^0.14.2
   cupertino_icons: ^1.0.0
   firebase_analytics: ^6.1.0
@@ -53,7 +54,7 @@ flutter:
   assets:
     - assets/images/train.png
     - assets/images/google.png
-    
+
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
